# social-app-django

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  dev-requirements.txt  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json
.github/workflows/: flake8.yml  pre-commit.yml  release.yml  ruff.yml  scorecard.yml  test.yml
.well-known/: funding-manifest-urls
files/: local.env.template
files/release/: Dockerfile  entrypoint.sh  pypirc.template
files/tests/: Dockerfile  entrypoint.sh  pyenv.sh
social_django/: __init__.py  admin.py  apps.py  backwards.py  compat.py  config.py  context_processors.py  fields.py  managers.py  middleware.py  models.py  models_utils.py  storage.py  strategy.py  urls.py  utils.py  views.py
social_django/audit/: clients.py
social_django/backends/: compliant_google.py
social_django/management/commands/: clearsocial.py
social_django/migrations/: 0001_initial.py  0002_add_related_name.py  0003_alter_email_max_length.py  0004_auto_20160423_0400.py  0005_auto_20160727_2333.py  0006_partial.py  0007_code_timestamp.py  0008_partial_timestamp.py  0009_auto_20191118_0520.py  0009_uid_db_index.py  0010_uid_db_index.py  0011_alter_id_fields.py  0011_auto_20210908_1142.py  0011_create_kms_token_fields.py  0011_tokens_separate_fields.py  0012_alter_association_id_alter_code_id_alter_nonce_id_and_more.py  0012_auto_20210908_1432.py  0012_django_kms_field_integration.py  0012_encrypt_tokens.py  0012_explicit_id_fields.py  0012_usersocialauth_extra_data_new.py  0013_migrate_extra_data.py  0013_rename_access_token_usersocialauth_user_access_token.py  0014_auto_20210909_1104.py  0014_remove_usersocialauth_extra_data.py  0015_rename_extra_data_new_usersocialauth_extra_data.py  0016_add_not_empty_string_constraint_to_uid_usersocialauth.py  0016_alter_usersocialauth_extra_data.py  0017_usersocialauth_user_social_auth_uid_required.py
social_django/pipeline/: disconnect.py
social_django/south_migrations/: 0001_initial.py
social_django/templates/social_django/: partial_pipeline_external_resume.html
tests/: compat.py  settings.py  test_admin.py  test_context_processors.py  test_middleware.py  test_migrations.py  test_models.py  test_storage_integration.py  test_strategy.py  test_views.py  urls.py
