[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.0.2"]

[dependency-groups]
dev = [
  "tox",
  "pre-commit",
  "coverage>=3.6",
  "pyright==1.1.400",
  "django-stubs-ext==5.1.3",
  "django-stubs==5.1.3",
  "mypy==1.15.0"
]

[project]
authors = [
  {name = "Matias Aguirre", email = "matiasaguirre@gmail.com"},
  {email = "michal@weblate.org", name = "Michal Čihař"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.9",
  "Topic :: Internet"
]
dependencies = [
  "Django>=4.2",
  "social-auth-core~=4.4"
]
description = "Python Social Authentication, Django integration."
keywords = ["django", "openid", "oauth", "saml", "social auth"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "social-auth-app-django"
readme = "README.md"
requires-python = ">=3.9"
version = "5.4.3"

[project.optional-dependencies]
# This is present until pip implements supports for PEP 735
# see https://github.com/pypa/pip/issues/12963
dev = [
  "coverage>=3.6",
  "django-stubs-ext==5.1.3",
  "django-stubs==5.1.3",
  "tox",
  "pre-commit",
  "pyright==1.1.400",
  "mypy==1.15.0"
]

[project.urls]
Homepage = "https://github.com/python-social-auth/social-app-django"

[tool.check-manifest]
ignore = [
  ".coveragerc",
  ".pre-commit-config.yaml",
  ".well-known/funding-manifest-urls",
  "tox.ini"
]

[tool.check-wheel-contents]
ignore = [
  "W004"  # Django migrations fail here
]

[tool.django-stubs]
django_settings_module = "tests.settings"
strict_settings = false

[tool.mypy]
check_untyped_defs = true
plugins = [
  "mypy_django_plugin.main"
]

[tool.pyright]
pythonVersion = "3.9"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "none"

[tool.ruff]
# Ignore some well known paths
exclude = [
  ".tox",
  ".venv",
  "*.egg",
  "build",
  "db/env.py",
  "db/versions/*.py",
  "dist",
  "doc",
  "site"
]
line-length = 120
output-format = "github"
target-version = "py37"

[tool.ruff.lint]
ignore = []
select = ["E", "F", "I", "PLC", "PLE", "UP"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.setuptools]
packages = ["social_django"]

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
