[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.0.2"]

[dependency-groups]
dev = [
  "coverage>=3.6",
  "django-stubs-ext==5.2.7",
  "django-stubs==5.2.7",
  "mypy==1.18.2",
  "pre-commit",
  "pyright==1.1.406",
  "tox"
]

[project]
authors = [
  {email = "matiasaguirre@gmail.com", name = "Matias Aguirre"},
  {email = "michal@weblate.org", name = "Michal Čihař"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Internet"
]
dependencies = [
  "Django>=5.1",
  "social-auth-core~=4.4"
]
description = "Python Social Authentication, Django integration."
keywords = ["django", "oauth", "openid", "saml", "social auth"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "social-auth-app-django"
readme = "README.md"
requires-python = ">=3.10"
version = "5.6.0"

[project.optional-dependencies]
# This is present until pip implements supports for PEP 735
# see https://github.com/pypa/pip/issues/12963
dev = [
  "coverage>=3.6",
  "django-stubs-ext==5.2.7",
  "django-stubs==5.2.7",
  "mypy==1.18.2",
  "pre-commit",
  "pyright==1.1.406",
  "tox"
]

[project.urls]
Changelog = "https://github.com/python-social-auth/social-app-django/blob/master/CHANGELOG.md"
Funding = "https://opencollective.com/python-social-auth"
Homepage = "https://github.com/python-social-auth/social-app-django"

[tool.check-manifest]
ignore = [
  ".coveragerc",
  ".pre-commit-config.yaml",
  ".well-known/funding-manifest-urls",
  "tox.ini"
]

[tool.check-wheel-contents]
ignore = [
  "W004"  # Django migrations fail here
]

[tool.django-stubs]
django_settings_module = "tests.settings"
strict_settings = false

[tool.mypy]
check_untyped_defs = true
plugins = [
  "mypy_django_plugin.main"
]

[tool.pyright]
pythonVersion = "3.10"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportPossiblyUnboundVariable = "none"

[tool.ruff]
# Ignore some well known paths
exclude = [
  "*.egg",
  ".tox",
  ".venv",
  "build",
  "db/env.py",
  "db/versions/*.py",
  "dist",
  "doc",
  "site"
]
line-length = 120

[tool.ruff.lint]
ignore = [
  "ANN",  # TODO: Missing type annotations
  "ARG001",  # TODO: Unused function argument (mostly for API compatibility)
  "ARG002",  # TODO: Unused method argument (mostly for API compatibility)
  "B026",  # TODO: Star-arg unpacking after a keyword argument is strongly discouraged
  "COM812",  # CONFIG: incompatible with formatter
  "D",  # TODO: Missing documentation
  "D203",  # CONFIG: incompatible with D211
  "D212",  # CONFIG: incompatible with D213
  "DJ008",  # TODO: Model does not define `__str__` method
  "FBT002",  # TODO: Boolean default positional argument in function definition
  "FBT003",  # TODO: Boolean positional value in function call
  "PT",  # CONFIG: Not using pytest
  "RUF012"  # TODO: ClassVar type annotations
]
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"social_django/migrations/*.py" = ["RUF012"]
"tests/settings.py" = ["PTH"]

[tool.setuptools]
packages = ["social_django"]

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
